Support replacing only in selected columns of the result data