@@ -21,9 +21,16 @@
  */
 package workbench.storage;
 
+import java.util.ArrayList;
+import java.util.List;
+
 import workbench.WbTestCase;
-import static org.junit.Assert.*;
+
+import workbench.db.ColumnIdentifier;
+
 import org.junit.Test;
+
+import static org.junit.Assert.*;
 
 /**
  *
@@ -52,7 +59,7 @@ public class DataStoreReplacerTest
         int row = ds.addRow();
         ds.setValue(row, 0, "First" + Integer.toString(i));
         ds.setValue(row, 1, "Last" + Integer.toString(i));
-        ds.setValue(row, 2, new Integer(i));
+        ds.setValue(row, 2, Integer.valueOf(i));
       }
       int[] selected = new int[] { 0,1,2 };
       DataStoreReplacer replacer = new DataStoreReplacer(ds);
@@ -80,11 +87,10 @@ public class DataStoreReplacerTest
   }
 
   @Test
-  public void testReplace()
+  public void testReplaceInColumns()
+    throws Exception
   {
-    try
-    {
-      String[] cols = new String[] { "firstname", "lastname", "numeric" };
+      String[] cols = new String[] { "firstname", "lastname", "id" };
       int[] types = new int[] { java.sql.Types.VARCHAR, java.sql.Types.VARCHAR, java.sql.Types.INTEGER };
 
       DataStore ds = new DataStore(cols, types);
@@ -92,132 +98,149 @@ public class DataStoreReplacerTest
       int row = ds.addRow();
       ds.setValue(row, 0, "Arthur");
       ds.setValue(row, 1, "Dent");
-      ds.setValue(row, 2, new Integer(5));
+      ds.setValue(row, 2, Integer.valueOf(5));
 
       row = ds.addRow();
       ds.setValue(row, 0, "Zaphod");
       ds.setValue(row, 1, "Beeblebrox");
-      ds.setValue(row, 2, new Integer(12));
+      ds.setValue(row, 2, Integer.valueOf(12));
 
       int mary1Row = ds.addRow();
       ds.setValue(mary1Row, 0, "Mary");
       ds.setValue(mary1Row, 1, "Moviestar");
-      ds.setValue(mary1Row, 2, new Integer(23));
+      ds.setValue(mary1Row, 2, Integer.valueOf(23));
 
       int mary2Row= ds.addRow();
       ds.setValue(mary2Row, 0, "Mary");
       ds.setValue(mary2Row, 1, "Poppins");
-      ds.setValue(mary2Row, 2, new Integer(42));
+      ds.setValue(mary2Row, 2, Integer.valueOf(42));
 
       DataStoreReplacer replacer = new DataStoreReplacer(ds);
+      List<ColumnIdentifier> columns = new ArrayList<>();
+      columns.add(ds.getColumn("firstname"));
+      replacer.setColumns(columns);
       int replaced = replacer.replaceAll("Mary", "Yram", null, true, false, false);
-      assertEquals("Wrong number of replacements", 2, replaced);
+      assertEquals(2, replaced);
+      replaced = replacer.replaceAll("Dent", "Clarke", null, true, false, false);
+      assertEquals(0, replaced);
+  }
 
-      String value = ds.getValueAsString(mary1Row, 0);
-      assertEquals("Wrong new value", "Yram", value);
+  @Test
+  public void testReplace()
+    throws Exception
+  {
+    String[] cols = new String[] { "firstname", "lastname", "numeric" };
+    int[] types = new int[] { java.sql.Types.VARCHAR, java.sql.Types.VARCHAR, java.sql.Types.INTEGER };
 
-      try
-      {
-        replacer.replaceAll("42", "gaga", null, false, true, false);
-        fail("No ConverterException thrown");
-      }
-      catch (Exception e)
-      {
-      }
+    DataStore ds = new DataStore(cols, types);
 
-      value = ds.getValueAsString(mary2Row, 2);
-      assertEquals("Value was replaced", "42", value);
+    int row = ds.addRow();
+    ds.setValue(row, 0, "Arthur");
+    ds.setValue(row, 1, "Dent");
+    ds.setValue(row, 2, Integer.valueOf(5));
 
-      try
-      {
-        replacer.replaceAll("42", "24", null, false, true, false);
-        value = ds.getValueAsString(mary2Row, 2);
-        assertEquals("Value was not replaced", "24", value);
-      }
-      catch (Exception e)
-      {
-        fail("Replacement threw an exception");
-      }
+    row = ds.addRow();
+    ds.setValue(row, 0, "Zaphod");
+    ds.setValue(row, 1, "Beeblebrox");
+    ds.setValue(row, 2, Integer.valueOf(12));
 
+    int mary1Row = ds.addRow();
+    ds.setValue(mary1Row, 0, "Mary");
+    ds.setValue(mary1Row, 1, "Moviestar");
+    ds.setValue(mary1Row, 2, Integer.valueOf(23));
+
+    int mary2Row= ds.addRow();
+    ds.setValue(mary2Row, 0, "Mary");
+    ds.setValue(mary2Row, 1, "Poppins");
+    ds.setValue(mary2Row, 2, Integer.valueOf(42));
+
+    DataStoreReplacer replacer = new DataStoreReplacer(ds);
+    int replaced = replacer.replaceAll("Mary", "Yram", null, true, false, false);
+    assertEquals("Wrong number of replacements", 2, replaced);
+
+    String value = ds.getValueAsString(mary1Row, 0);
+    assertEquals("Wrong new value", "Yram", value);
+
+    try
+    {
+      replacer.replaceAll("42", "gaga", null, false, true, false);
+      fail("No ConverterException thrown");
     }
     catch (Exception e)
     {
-      fail(e.getMessage());
     }
+
+    value = ds.getValueAsString(mary2Row, 2);
+    assertEquals("Value was replaced", "42", value);
+
+    replacer.replaceAll("42", "24", null, false, true, false);
+    value = ds.getValueAsString(mary2Row, 2);
+    assertEquals("Value was not replaced", "24", value);
   }
 
   @Test
   public void testFind()
   {
-    try
-    {
-      String[] cols = new String[] { "firstname", "lastname", "numeric" };
-      int[] types = new int[] { java.sql.Types.VARCHAR, java.sql.Types.VARCHAR, java.sql.Types.INTEGER };
+    String[] cols = new String[] { "firstname", "lastname", "numeric" };
+    int[] types = new int[] { java.sql.Types.VARCHAR, java.sql.Types.VARCHAR, java.sql.Types.INTEGER };
 
-      DataStore ds = new DataStore(cols, types);
+    DataStore ds = new DataStore(cols, types);
 
-      int row = ds.addRow();
-      ds.setValue(row, 0, "Arthur");
-      ds.setValue(row, 1, "Dent");
-      ds.setValue(row, 2, new Integer(5));
+    int row = ds.addRow();
+    ds.setValue(row, 0, "Arthur");
+    ds.setValue(row, 1, "Dent");
+    ds.setValue(row, 2, Integer.valueOf(5));
 
-      row = ds.addRow();
-      ds.setValue(row, 0, "Zaphod");
-      ds.setValue(row, 1, "Beeblebrox");
-      ds.setValue(row, 2, new Integer(12));
+    row = ds.addRow();
+    ds.setValue(row, 0, "Zaphod");
+    ds.setValue(row, 1, "Beeblebrox");
+    ds.setValue(row, 2, Integer.valueOf(12));
 
-      int mary1Row = ds.addRow();
-      ds.setValue(mary1Row, 0, "Mary");
-      ds.setValue(mary1Row, 1, "Moviestar");
-      ds.setValue(mary1Row, 2, new Integer(23));
+    int mary1Row = ds.addRow();
+    ds.setValue(mary1Row, 0, "Mary");
+    ds.setValue(mary1Row, 1, "Moviestar");
+    ds.setValue(mary1Row, 2, Integer.valueOf(23));
 
-      int mary2Row= ds.addRow();
-      ds.setValue(mary2Row, 0, "Mary");
-      ds.setValue(mary2Row, 1, "Poppins");
-      ds.setValue(mary2Row, 2, new Integer(42));
+    int mary2Row= ds.addRow();
+    ds.setValue(mary2Row, 0, "Mary");
+    ds.setValue(mary2Row, 1, "Poppins");
+    ds.setValue(mary2Row, 2, Integer.valueOf(42));
 
-      DataStoreReplacer instance = new DataStoreReplacer(ds);
+    DataStoreReplacer instance = new DataStoreReplacer(ds);
 
-      Position expResult = new Position(0,1);
-      Position result = instance.find("dent", true, false, false);
-      assertEquals("Value not found", expResult, result);
+    Position expResult = new Position(0,1);
+    Position result = instance.find("dent", true, false, false);
+    assertEquals("Value not found", expResult, result);
 
 
-      result = instance.find("gaga", true, false, false);
-      assertEquals("Value found", Position.NO_POSITION, result);
+    result = instance.find("gaga", true, false, false);
+    assertEquals("Value found", Position.NO_POSITION, result);
 
 
-      result = instance.find("Mary", false, false, false);
-      assertEquals("First value not found", new Position(mary1Row, 0), result);
+    result = instance.find("Mary", false, false, false);
+    assertEquals("First value not found", new Position(mary1Row, 0), result);
 
-      result = instance.findNext();
-      assertEquals("Second value not found", new Position(mary2Row, 0), result);
+    result = instance.findNext();
+    assertEquals("Second value not found", new Position(mary2Row, 0), result);
 
-      result = instance.find("12", true, false, false);
-      assertEquals("Numeric value not found", new Position(1,2), result);
+    result = instance.find("12", true, false, false);
+    assertEquals("Numeric value not found", new Position(1,2), result);
 
-      result = instance.find("M[a|o]", true, false, true);
-      assertEquals("Regex not found", new Position(2,0), result);
-      result = instance.findNext();
-      assertEquals("Regex not found", new Position(2,1), result);
-      result = instance.findNext();
-      assertEquals("Regex not found", new Position(3,0), result);
-      result = instance.findNext();
-      assertEquals("Regex found", Position.NO_POSITION, result);
+    result = instance.find("M[a|o]", true, false, true);
+    assertEquals("Regex not found", new Position(2,0), result);
+    result = instance.findNext();
+    assertEquals("Regex not found", new Position(2,1), result);
+    result = instance.findNext();
+    assertEquals("Regex not found", new Position(3,0), result);
+    result = instance.findNext();
+    assertEquals("Regex found", Position.NO_POSITION, result);
 
-      result = instance.find("[1|4]2", true, false, true);
-      assertEquals("Regex not found", new Position(1,2), result);
-      result = instance.findNext();
-      assertEquals("Regex not found", new Position(mary2Row,2), result);
-      result = instance.findNext();
-      assertEquals("Regex found", Position.NO_POSITION, result);
-
-    }
-    catch (Exception e)
-    {
-      e.printStackTrace();
-      fail(e.getMessage());
-    }
+    result = instance.find("[1|4]2", true, false, true);
+    assertEquals("Regex not found", new Position(1,2), result);
+    result = instance.findNext();
+    assertEquals("Regex not found", new Position(mary2Row,2), result);
+    result = instance.findNext();
+    assertEquals("Regex found", Position.NO_POSITION, result);
   }
 
 
